2008-02-26  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.py:
	  First phase of bringing this up to date for trunk component API.
	  Not yet tested.

2008-02-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/muxers/asf/asf.xml:
	Unbitrot and provide a muxer format

2008-02-26  Michael Smith <msmith@fluendo.com>

	* misc/pycheckerrc:
	  Have the same features/etc enabled here as in core flumotion. Makes us
	  pass pychecker again.

2008-02-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	  Apparently some API has changed.

2008-01-30  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Update to new wizard API
	
2008-01-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wmv/wmv-wizard.glade:
	Allow bitrates up to 16348kbps
	
	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv.xml:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	WMV -> Windows Media Video
	WMA -> windows Media Audio

2008-01-28  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv-wizard.glade:
	* flumotion/component/encoders/wmv/wmv.xml:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	* flumotion/component/muxers/asf/asf.xml:

	Add initial wizard support, fixes #1571

2007-11-20  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.xml:
	  Document 'secure' option a little better.

2007-07-26  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/component/producers/wms/wms.xml: